--- a/_includes/cb/credits.html
+++ b/_includes/cb/credits.html
@@ -7,11 +7,11 @@
                 
             </div> 
             <div class="container mt-4 border rounded p-4 bg-white">
-                <h3>responsables de la edición:</h3>
+                <h3>Responsable de la edición:</h3>
                 <div class="row my-2 justify-content-center">
                     <div class="col-md-8 p-4">
 <ul>
-    <li><hi><a href="https://orcid.org/0000-0002-xxxx-xxxx">Integrante 1 (FILIACIÓN)</a></hi></li>
+    <li><hi><a href="https://orcid.org/0000-0001-8283-4946">Israel Ramírez 1 (El Colegio de San Luis)</a></hi></li>
     <li><hi><a href="https://orcid.org/0000-0002-xxxx-xxxx">Integrante 2 (FILIACIÓN)</a></hi></li>
     <li><hi><a href="https://orcid.org/0000-0002-xxxx-xxxx">Integrante 3 (FILIACIÓN)</a></hi></li>
 
