--- a/_includes/cb/credits.html
+++ b/_includes/cb/credits.html
@@ -11,7 +11,7 @@
                 <div class="row my-2 justify-content-center">
                     <div class="col-md-8 p-4">
 <ul>
-    <li><hi><a href="https://orcid.org/0000-0001-8283-4946">Israel Ramírez 1 (El Colegio de San Luis)</a></hi></li>
+    <li><hi><a href="https://orcid.org/0000-0001-8283-4946">Israel Ramírez</a>(El Colegio de San Luis)</hi></li>
 
 
 </ul>
